<resources>
    <string name="app_name">mhGAP</string>
    <string name="title_activity_home">Home</string>
    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>
    <string name="action_settings">Settings</string>
    <string name="title_activity_contactus">Contact Us</string>
    <string name="title_activity_essential">Essential Care</string>
    <string name="t">"> Always be respectful."\n"> Don’t judge people by their behaviours and appearance."\n"> Stay calm and patient."</string>
    <string name="s">"> Include the person (and with their consent, their carers and family) in all aspects of assessment and management as much as possible. This includes children, adolescents and older adults."</string>
    <string name="h">Show extra sensitivity with difﬁcult topics. Remind the person that what they tell you will remain conﬁdential. Acknowledge that it may have been difﬁcult for the person to disclose the information.</string>
    <string name="e">Use simple language. Be clear and concise. Use open-ended questions, summarizing and clarifying statements. Summarize and repeat key points. Allow the person to ask questions about the information provided.</string>
    <string name="r">"> Actively listen. Be empathic and sensitive."\n"> Allow the person to speak without interruption."\n"> If the history is unclear, be patient and ask for clariﬁcation."\n"> For children, use language that they can understand. For example, ask about their interests (toys, friends, school, etc.)."\n"> For adolescents, convey that you understand their feelings and situation."</string>
    <string name="i">"> Meet the person in a private space, if possible."\n ">Be welcoming and conduct introductions in a culturally appropriate manner."\n"> Maintain eye contact and use body language and facial expressions that facilitate trust."\n"> Explain that information discussed during the visit will be kept conﬁdential and will not be shared without prior permission."\n"> If carers are present, suggest to speak with the person alone (except for young children) and obtain consent to share clinical information."\n"> When interviewing a young woman, consider having another female staff member or carer present."\n</string>
    <string name="n">"COMMUNICATION TIP #1"\n" Create an environment that facilitates open communication"</string>
    <string name="g">"COMMUNICATION TIP #2"\n" Involve the person"</string>
    <string name="j">"COMMUNICATION TIP #3"\n" Start by listening"</string>
    <string name="a">"COMMUNICATION TIP #4" \n"Be friendly, respectful and nonjudgemental at all times"</string>
    <string name="m">"COMMUNICATION TIP #5"\n" Use good verbal communication skills"</string>
    <string name="o">"COMMUNICATION TIP #6"\n" Respond with sensitivity when people disclose difﬁcult experiences (e.g. sexual assault, violence or self-harm)"</string>
    <string name="donts">DONTs</string>
    <string name="dos">DOs</string>
    <string name="y">">Do not discriminate against people with MNS conditions."\n"> Do not ignore the priorities or wishes of people with MNS conditions."\n"> Do not make decisions for, on behalf of, or instead of the person with MNS conditions."\n"> Do not use overly technical language in explaining proposed treatment."</string>
    <string name="d">I. Use Effective Communication Skills</string>
    <string name="l">II. Promote Respect and Dignity</string>
    <string name="k">Persons with MNS conditions should be treated with respect and dignity in a culturally appropriate manner. As a health care provider, make every effort to respect and promote the will and preference of people with MNS conditions and support and engage them and their carers in the most inclusive way. Persons with MNS conditions are often more vulnerable to human rights violations. Therefore, it is essential that in the health care setting, providers promote the rights of people with MNS conditions in line with international human rights standards, including the UN Convention on the Rights of Persons with Disability (CRPD)*.</string>
    <string name="u">"> Treat people with MNS conditions with respect and dignity."\n"> Protect the conﬁdentiality of people with MNS conditions."\n"> Ensure privacy in the clinical setting."\n"> Always provide access to information and explain the proposed treatment risks and beneﬁts in writing, if possible."\n"> Make sure the person provides consent to treatment."\n"> Promote autonomy and independent living in the community."\n"> Provide persons with MNS conditions with access to supported decision making options."</string>
    <string name="v">Using effective communication skills allows healthcare providers to deliver good quality care to adults, adolescents, and children with mental, neurological and substance use (MNS) conditions. Consider the following core communication skills and tips:</string>
    <string name="history_taking">History Taking</string>
    <string name="he" />
    <string name="ri">"1.Presenting Complaint"\n" Main symptom or reason that the person is seeking care."\n"> Ask when, why, and how it started."\n"> It is important at this stage to gather as much information as possible about the person’s symptoms and their situation."\n\n"2. Past MNS History"> Ask about similar problems in the past, any psychiatric hospitalizations or medications prescribed for MNS conditions, and any past suicide attempts."\n"> Explore tobacco, alcohol and substance use."\n\n"3. General Health History"\n"> Ask about physical health problems and medications."\n"> Obtain a list of current medications."\n"> Ask about allergies to medications"\n\n" 4.Family History of MNS Conditions"\n"> Explore possible family history of MNS conditions and ask if anyone had similar symptoms or has received treatment for a MNS condition."\n\n"5. Psychosocial History"\n"> Ask about current stressors, coping methods and social support."\n"> Ask about current socio-occupational functioning (how the person is functioning at home, work and in relationships)."\n"> Obtain basic information including where the person lives, level of education, work/employment history, marital status and number/ages of children, income, and household structure/living conditions."\n\n" For children and adolescents, ask about whether they have a carer, and the nature and quality of the relationship between them."</string>
    <string name="ja">Assessment of Physical Health</string>
    <string name="jaa">Conducting an assessment for MNS conditions involves the following steps. First, the presenting complaint is explored, then a history is obtained including asking about past MNS issues, general health problems, family MNS history, and psychosocial history. Observe the person (Mental Status Exam), establish a differential diagnosis, and identify the MNS condition. As part of the assessment, conduct a physical examination and obtain basic laboratory tests as needed. The assessment is conducted with informed consent of the person.</string>
    <string name="p">I. Assess Physical Health</string>
    <string name="pe">Management of Physical Health</string>
    <string name="ge">Persons with MNS disorders are at higher risk of premature mortality from preventable disease and therefore must always receive a physical health assessment as part of a comprehensive evaluation. Be sure to take a proper history, including both physical health and MNS history, followed by a physical health assessment to identify concurrent conditions and educate the person about preventive measures. These actions must always be undertaken with the person’s informed consent.</string>
    <string name="li">"> Take a detailed history and ask about risk factors."\n" Physical inactivity, inappropriate diet, tobacco, harmful alcohol and/or substance use, risky behaviour and chronic disease."\n"> Perform a physical examination."\n"> Consider a differential diagnosis."\n" Rule out physical conditions and underlying causes of MNS presentations by history, physical examination and basic laboratory tests as needed and available."\n"> Identify comorbidities."\n" Often, a person may have more than one MNS condition at the same time. It is important to assess and manage this when it occurs."</string>
    <string name="ml">"> Treat existing comorbidities concurrently with the MNS disorder. Refer to/consult with specialists, if needed."\n"> Provide education on modiﬁable risk factors to prevent disease and encourage a healthy lifestyle."\n">To support physical health of persons with MNS conditions, health care providers should:"\n" – Provide advice about the importance of physical activity and a healthy diet."\n" – Educate people about harmful alcohol use. "\n"– Encourage cessation of tobacco and substance use."\n" – Provide education about other risky behaviour (e.g. unprotected sex)."\n" – Conduct regular physical health checks and vaccinations."\n" – Prepare people for developmental life changes, such as puberty and menopause, and provide the necessary support."\n "– Discuss plans for pregnancy and contraception methods with women of childbearing age"</string>
    <string name="we">5.Ensure that appropriate plan for follow-up is in place.</string>
    <string name="are">6.Work together with carer and families in supporting the person with the MNS disorder</string>
    <string name="_te">"1. Physical Examination"\n"> Conduct a targeted physical examination guided by the information found during the MNS assessment."</string>
    <string name="ui">1.Develop a treatment plan in collaboration with the person and their carer.</string>
    <string name="_2_always_offer_psychosocial_interventions_for_the_person_and_their_carers">2 Always offer psychosocial interventions for the person and their carers.</string>
    <string name="ni">"2.Mental Status Examination (MSE)*"\n"> Ask about and observe the person’s Appearance and Behaviour, Mood and Affect, Content of Thought, any Perceptual disturbances and Cognition. See symptom based Master Chart (MC) for details."</string>
    <string name="lo">3. Treat the MNS disorder using pharmacological interventions when indicated.</string>
    <string name="po">"3.Differential Diagnosis "\n">Consider the differential diagnosis and rule out conditions that have similar presenting symptoms."</string>
    <string name="ki">4. Refer to specialists or hospital when indicated and available</string>
    <string name="ju">"4.Basic Laboratory Tests"\n"> Request laboratory tests when indicated and possible, especially to rule out physical causes."</string>
    <string name="ln">7. Foster strong links with employment, education, social services (including housing) and other relevant sectors.</string>
    <string name="jh">8. Modify treatment plans for special populations.</string>
    <string name="qa">ASSESSMENT FOR MNS CONDITIONS</string>
    <string name="vd">"CLINICAL TIP:"\n" Written treatment plan should cover:"\n" – Pharmacological interventions (if any)"\n" – Psychosocial interventions"\n" – Referrals"\n" – Follow-up plan"\n" – Management of any concurrent physical and/or other MNS conditions"</string>
    <string name="f">III. Manage MNS Conditions</string>
    <string name="mj">MANAGEMENT STEPS FOR MNS CONDITIONS</string>
    <string name="hg">Once the assessment is conducted, follow the management algorithm in mhGAP-IG to manage the MNS disorder. Key steps in management are found in the box below.</string>
    <string name="cs">Suspect a priority MNS condition and go to the relevant module(s) for assessment</string>
    <string name="hu">"Identify the MNS Condition"\n"> Identify the MNS condition using the appropriate module(s)."\n "> Assess for other MNS symptoms and priority conditions (see Master Chart)." \n"> Follow the appropriate management algorithm and treatment protocols."</string>
</resources>