<?xml version="1.0" encoding="utf-8"?>
<android.support.constraint.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    app:layout_behavior="@string/appbar_scrolling_view_behavior"
    tools:context="com.example.tencho.mhgap2.Essentail1"
    tools:showIn="@layout/app_bar_essentail1">
    <ScrollView
        android:layout_width="0dp"
        android:layout_height="0dp"
        tools:layout_constraintTop_creator="1"
        tools:layout_constraintRight_creator="1"
        tools:layout_constraintBottom_creator="1"
        android:layout_marginStart="8dp"
        app:layout_constraintBottom_toBottomOf="parent"
        android:layout_marginEnd="8dp"
        app:layout_constraintRight_toRightOf="parent"
        android:layout_marginTop="8dp"
        tools:layout_constraintLeft_creator="1"
        android:layout_marginBottom="8dp"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        android:layout_marginLeft="8dp"
        android:layout_marginRight="8dp">
        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical">

            <TextView
                android:id="@+id/t5"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:textSize="24dp"
                android:textColor="#2f7b3d"
                android:layout_marginBottom="10dp"
                android:textAlignment="center"
                android:text="@string/d"
                tools:ignore="SpUsage"
                />

            <TextView
                android:id="@+id/t6"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/v" />

            <TextView
                android:id="@+id/t11"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/n"
                android:textSize="20dp"
                android:textColor="#337641"
                android:layout_marginBottom="10dp"
                android:layout_marginTop="10dp"
                tools:ignore="SpUsage" />

            <TextView
                android:id="@+id/t12"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/i"/>

            <TextView
                android:id="@+id/t15"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:textColor="#367850"
                android:layout_marginBottom="10dp"
                android:text="@string/g"
                android:textSize="24dp"
                tools:ignore="SpUsage" />

            <TextView
                android:id="@+id/t16"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/s"/>

            <TextView
                android:id="@+id/t26"
                android:textColor="#398b54"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/j"
                android:textSize="23dp"
                android:layout_marginBottom="10dp"
                android:layout_marginTop="10dp"
                tools:ignore="SpUsage"
                />

            <TextView
                android:id="@+id/t27"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/r"/>

            <TextView
                android:id="@+id/t32"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/a"
                android:textSize="23dp"
                android:textColor="#2a7147"
                tools:ignore="SpUsage"
                />
            <TextView
                android:id="@+id/t33"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/t"/>
            <TextView
                android:id="@+id/t28"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:textColor="#418950"
                android:text="@string/m"
                android:textSize="23dp"
                tools:ignore="SpUsage"
                />
            <TextView
                android:id="@+id/t29"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/e"
                />

            <TextView
                android:id="@+id/t30"
                android:layout_marginBottom="10dp"
                android:layout_marginTop="10dp"
                android:textColor="#358456"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/o"
                android:textAlignment="center"
                android:textSize="23dp"
                tools:ignore="SpUsage"
                />
            <TextView
                android:id="@+id/t31"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/h"/>

            <TextView
                android:id="@+id/t7"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:textSize="25dp"
                android:textColor="#267333"
                android:text="@string/l"
                tools:ignore="SpUsage"
                />

            <TextView
                android:id="@+id/t9"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/k"/>
            <TextView
                android:id="@+id/t3"
                android:layout_marginBottom="10dp"
                android:layout_marginTop="10dp"
                android:textColor="#267333"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/dos"
                android:textAlignment="center"
                android:textSize="25dp"
                tools:ignore="SpUsage" />

            <TextView
                android:id="@+id/t2"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/u"
                />


            <TextView
                android:id="@+id/t1"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/donts"
                android:layout_marginTop="10dp"
                android:layout_marginBottom="10dp"
                android:textColor="#2c763f"
                android:textAlignment="center"
                android:textSize="25dp"
                tools:ignore="SpUsage" />

            <TextView
                android:id="@+id/t10"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/y"/>

        </LinearLayout>
    </ScrollView>


</android.support.constraint.ConstraintLayout>
