<?xml version="1.0" encoding="utf-8"?>
<android.support.constraint.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    app:layout_behavior="@string/appbar_scrolling_view_behavior"
    tools:context="com.example.tencho.mhgap2.Essential2"
    tools:showIn="@layout/app_bar_essential2">
    <ScrollView
        android:layout_width="0dp"
        android:layout_height="0dp"
        tools:layout_constraintTop_creator="1"
        tools:layout_constraintRight_creator="1"
        tools:layout_constraintBottom_creator="1"
        android:layout_marginStart="8dp"
        app:layout_constraintBottom_toBottomOf="parent"
        android:layout_marginEnd="8dp"
        app:layout_constraintRight_toRightOf="parent"
        android:layout_marginTop="8dp"
        tools:layout_constraintLeft_creator="1"
        android:layout_marginBottom="8dp"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        android:layout_marginLeft="8dp"
        android:layout_marginRight="8dp"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintVertical_bias="0.0">
        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            android:weightSum="1">

            <TextView
                android:id="@+id/t5"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:textSize="23dp"
                android:textColor="#035777"
                android:fontFamily="sans-serif-condensed"
                android:textAlignment="center"
                android:text="@string/p"
                tools:ignore="SpUsage"
                />

            <TextView
                android:id="@+id/t6"
                android:textColor="#000000"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:fontFamily="sans-serif-condensed"
                android:textSize="16sp"
                android:text="@string/ge"/>

            <TextView
                android:id="@+id/t11"
                android:layout_marginTop="15dp"
                android:layout_marginBottom="15dp"
                android:textColor="#0481b1"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/ja"
                android:textAlignment="center"
                android:textSize="19dp"
                android:fontFamily="sans-serif-condensed"
                tools:ignore="SpUsage" />

            <TextView
                android:id="@+id/t12"
                android:textColor="#000000"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:fontFamily="sans-serif-condensed"
                android:textSize="16sp"
                android:text="@string/li"
                />

            <TextView
                android:id="@+id/t15"
                android:layout_width="match_parent"
                android:textColor="#0481b1"
                android:layout_marginTop="15dp"
                android:layout_marginBottom="15dp"
                android:layout_height="wrap_content"
                android:text="@string/pe"
                android:textSize="19dp"
                android:fontFamily="sans-serif-condensed"
                android:textAlignment="center"
                tools:ignore="SpUsage" />

            <TextView
                android:id="@+id/t16"
                android:textColor="#000000"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:fontFamily="sans-serif-condensed"
                android:textSize="16sp"
                android:text="@string/he"/>

            <TextView
                android:id="@+id/t26"
                android:layout_width="394dp"
                android:layout_height="wrap_content"
                android:textColor="#000000"
                android:text="@string/ml"
                tools:ignore="InefficientWeight,SpUsage"
                android:layout_weight="0.39"
                android:fontFamily="sans-serif-condensed"
                android:textSize="16sp"/>

            <TextView
                android:id="@+id/t27"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:textColor="#000000"
                android:fontFamily="sans-serif-condensed"
                android:textSize="16sp"
                android:text="@string/jaa"/>

            <TextView
                android:id="@+id/t32"
                android:layout_width="match_parent"
                android:layout_marginBottom="15dp"
                android:layout_marginTop="15dp"
                android:textColor="#0481b1"
                android:layout_height="wrap_content"
                android:text="@string/history_taking"
                android:textSize="19dp"
                android:textAlignment="center"
                tools:ignore="SpUsage"
                android:fontFamily="sans-serif-condensed" />
            <TextView
                android:id="@+id/t33"
                android:layout_width="match_parent"
                android:textColor="#000000"
                android:layout_height="wrap_content"
                android:fontFamily="sans-serif-condensed"
                android:textSize="16sp"
                android:text="@string/ri"/>

            <TextView
                android:id="@+id/t29"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:textColor="#000000"
                android:fontFamily="sans-serif-condensed"
                android:textSize="16sp"
                android:text="@string/cs"
                />

            <TextView
                android:id="@+id/t30"
                android:layout_width="match_parent"
                android:textColor="#000000"
                android:layout_height="wrap_content"
                android:text="@string/qa"
                android:fontFamily="sans-serif-condensed"
                android:textSize="16sp"
                tools:ignore="SpUsage"
                />
            <TextView
                android:id="@+id/t31"
                android:textColor="#000000"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:fontFamily="sans-serif-condensed"
                android:textSize="16sp"
                android:text="@string/_te"
                />
            <TextView
                android:id="@+id/t9"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:textColor="#000000"
                android:fontFamily="sans-serif-condensed"
                android:textSize="16sp"
                android:text="@string/ni"/>
            <TextView
                android:id="@+id/t3"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:textColor="#000000"
                android:text="@string/po"
                tools:ignore="SpUsage"
                android:fontFamily="sans-serif-condensed"
                android:textSize="16sp"/>

            <TextView
                android:id="@+id/t2"
                android:layout_width="match_parent"
                android:textColor="#000000"
                android:layout_height="wrap_content"
                android:fontFamily="sans-serif-condensed"
                android:textSize="16sp"
                android:text="@string/ju"
                />


            <TextView
                android:id="@+id/t1"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:textColor="#000000"
                android:fontFamily="sans-serif-condensed"
                android:textSize="16sp"
                android:text="@string/hu"
                tools:ignore="SpUsage" />

            <TextView
                android:id="@+id/t10"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:textColor="#035777"
                android:textAlignment="center"
                android:textSize="23dp"
                android:fontFamily="sans-serif-condensed"
                android:text="@string/f"/>
            <TextView
                android:id="@+id/t"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:textColor="#000000"
                android:fontFamily="sans-serif-condensed"
                android:textSize="16sp"
                android:text="@string/hg"
                tools:ignore="SpUsage" />
            <TextView
                android:id="@+id/t90"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:textColor="#000000"
                android:fontFamily="sans-serif-condensed"
                android:textSize="16sp"
                android:text="@string/mj"
                tools:ignore="SpUsage" />
            <TextView
                android:id="@+id/t91"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:textColor="#000000"
                android:fontFamily="sans-serif-condensed"
                android:textSize="16sp"
                android:text="@string/ui"
                tools:ignore="SpUsage" />
            <TextView
                android:id="@+id/t92"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:textColor="#000000"
                android:fontFamily="sans-serif-condensed"
                android:textSize="16sp"
                android:text="@string/vd"
                tools:ignore="SpUsage" />

            <TextView
                android:id="@+id/t95"
                android:layout_width="match_parent"
                android:textColor="#000000"
                android:fontFamily="sans-serif-condensed"
                android:textSize="16sp"
                android:layout_height="wrap_content"
                android:text="@string/_2_always_offer_psychosocial_interventions_for_the_person_and_their_carers"
                tools:ignore="SpUsage" />
            <TextView
                android:id="@+id/t97"
                android:layout_width="match_parent"
                android:textColor="#000000"
                android:fontFamily="sans-serif-condensed"
                android:textSize="16sp"
                android:layout_height="wrap_content"
                android:text="@string/lo"
                tools:ignore="SpUsage" />
            <TextView
                android:id="@+id/t98"
                android:textColor="#000000"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:fontFamily="sans-serif-condensed"
                android:textSize="16sp"
                android:text="@string/ki"
                tools:ignore="SpUsage" />
            <TextView
                android:id="@+id/t89"
                android:layout_width="match_parent"
                android:textColor="#000000"
                android:fontFamily="sans-serif-condensed"
                android:textSize="16sp"
                android:layout_height="wrap_content"
                android:text="@string/we"
                tools:ignore="SpUsage" />
            <TextView
                android:id="@+id/t67"
                android:textColor="#000000"
                android:fontFamily="sans-serif-condensed"
                android:textSize="16sp"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/are"
                tools:ignore="SpUsage" />
            <TextView
                android:id="@+id/t76"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:textColor="#000000"
                android:fontFamily="sans-serif-condensed"
                android:textSize="16sp"
                android:text="@string/ln"
                tools:ignore="SpUsage" />
            <TextView
                android:id="@+id/t62"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:textColor="#000000"
                android:fontFamily="sans-serif-condensed"
                android:textSize="16sp"
                android:text="@string/jh"
                tools:ignore="SpUsage" />

        </LinearLayout>
    </ScrollView>

</android.support.constraint.ConstraintLayout>
